# Quicksilver

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  class_diagram.md  create_db.py  docker-compose.yml  fetch_data.py  finbert_infer.py  finbert_scoring.py  normalize_store.py  package_diagram.md  pyproject.toml  requirements.txt  sentiment_analysis.py
.streamlit/: config.toml
alerts/: alert_engine.py  local_health.py
analytics/: __init__.py  insight_engine.py  local_dashboard_data.py  weekly_report.py
config/: __init__.py  news_topics.py  settings.py  watchlist.py
dashboard/: app.py  data_sources.py
dbt/: dbt_project.yml  profiles.yml
diagrams/: quicksilver_ERD.md  quicksilver_UML.md
docker/: Dockerfile  Dockerfile.local  Dockerfile.test
docs/: class_diagram.md  current.md  package_diagram.md
ingestion/: finnhub_client.py  public_news_client.py
migrations/: env.py
models/: __init__.py  insight.py  raw_headline.py  scored_headline.py  sentiment_result.py
orchestration/: quicksilver_dag.py
pipelines/: backfill_historical_headlines.py  ingest_raw_headlines.py  ingest_score_headlines.py  run_local_pipeline.py
requirements/: dev.txt  full.txt  local.txt
scripts/: apply_migrations.py  check_local_health.py  generate_weekly_report.py  reset_local_portfolio.py
sentiment/: __init__.py  finbert_scorer.py  lexicon_scorer.py  scorer_factory.py  source_quality.py
simulation/: __init__.py  insight_evaluator.py  mock_exchange.py  price_provider.py
storage/: factory.py  local_mysql_storage.py  local_schema.py  (+2 more)
(+31 files in other folders)
